feat(contact-line): add controller for contact line, also a method for creating them
